2024-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-beta01: Blagden Alley';git push
	git tag -a 5.3.0-beta01 -m 'ncclimo: npo, tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags

	* Document new features

	* Update --npo paths for Chrysalis, Acme1, Perlmutter

	* Resuscitate Acme1 builds by emulating Andes methods

	* Resuscitate Chrysalis builds by emulating Andes methods

2024-12-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha06: Awkward Self Haircut';git push
	git tag -a 5.3.0-alpha06 -m 'ncclimo: tms wrt area_wgt, omit -v; ncks: S1D pft->PFT;';git push --tags

	* Omit -v in ncap2 call for rgn_stt computation

2024-12-06  Charlie Zender  <zender@uci.edu>

	* ncclimo: Output valid_area_per_gridcell=area_wgt=(area*landfrac) for use by zppy

	* ncclimo: region_name@long_name now specifies area-weighted sums (rgn_stt=sum) or means (rgn_stt=avg)

2024-12-05  Charlie Zender  <zender@uci.edu>

	* S1D change pft coordinate name to PFT so it is not same as dimension name (new CF 1.12 rule)

2024-11-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha05: Break of Dawn';git push
	git tag -a 5.3.0-alpha05 -m 'ncks: S1D ilun_UNUSED, snw_ocn; ncrcat: fix REC_APN wrn';git push --tags

	* nco.texi Document lut_out, snw_ocn

	* S1D add snw_ocn and no_snw_ocn flags to affirm or disable unpacking of snow levels to ocean-like ordering

	* ncrcat: Allow monotonicity test when REC_APN,	ensure last value and monotonicity defined before comparison

2024-11-21  Charlie Zender  <zender@uci.edu>

	* ncrcat: Eschew monotonicity test nco_rec_crd_chk() when --record_append = REC_APN is true

2024-11-19  Charlie Zender  <zender@uci.edu>
