@@ -1,1 +1,1 @@
-5.3.0-beta01
+5.3.0
