@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.0-beta01
-@set doc-edition 5.3.0-beta01
+@set nco-edition 5.3.0
+@set doc-edition 5.3.0
 @set copyright-years 1995--2024
 @set update-year 2024
 @set update-date 20 December 2024
