@@ -1,5 +1,9 @@
 2024-12-20  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.0 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.0: Awkward Self-Haircut';git push
+	git tag -a 5.3.0 -m 'ncclimo: npo, tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags
+
 	* NCO 5.3.0-beta01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0-beta01: Blagden Alley';git push
 	git tag -a 5.3.0-beta01 -m 'ncclimo: npo, tms area_wgt, omit -v; ncks: S1D refactor, lut_out, frc_column, frc_landunit, snw_ocn, pft->PFT, clmv4; ncrcat: fix REC_APN wrn';git push --tags
